--- a/Fuel Management/Site.Master
+++ b/Fuel Management/Site.Master
@@ -99,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<ul class="dropdown-menu drp-mnu">
 											<li> <a href="#"><i class="fa fa-cog"></i> Settings</a> </li> 
 											<li> <a href="#"><i class="fa fa-user"></i> Profile</a> </li> 
-											<li><asp:LinkButton ID="linklogout"  EnableTheming="true" onclick="Logout_btnClick" ToolTip="Log Out" runat="server">Log Out</asp:LinkButton>
+											<li><i class="fa fa-sign-out"><asp:LinkButton ID="linklogout"  EnableTheming="true" onclick="Logout_btnClick" ToolTip="Log Out" runat="server">Log Out</asp:LinkButton></i>
 										</ul>
 									</li>
 								</ul>
@@ -170,6 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		            <li id="menu-arquivos" ><a href="ReportMonth.aspx">Monthly Report</a></li>
 		           
 		          </ul>
+                    </ul>
 		    </div>
 	 </div>
 	<div class="clearfix"> </div>
