--- a/Fuel Management/css/style.css
+++ b/Fuel Management/css/style.css
@@ -43,6 +43,11 @@ a:hover {
   height: 100%;
   margin: 0px auto;
 }
+
+.FixedHeader{
+    position:absolute;
+    font-weight:bold;
+}
 .left-content {
     float: right;
         width: 86.5%;
@@ -124,7 +129,7 @@ a:hover {
   transition-delay: 300ms;
 }
 .sidebar-menu {
-  position: absolute;
+  position: fixed;
   float: left;
   width: 220px;
   top: -2px;
@@ -164,7 +169,7 @@ a:hover {
     left: -5px;
 }
 #menu li a:hover {
-  color:#fdbb30;
+  color:red;
   transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
 }
 #menu li.active > a {
@@ -236,10 +241,10 @@ a:hover {
     -o-border-radius:3px;
     color: #FFF;
     background-clip: padding-box;
-    background:#68AE00;
+    background:red;
 }
 .sidebar-icon:hover{
-	 color: #FFF;
+	 color: red;
 }
 .fa-html5 {
   color: #fff;
@@ -1602,6 +1607,52 @@ code {
     background: #fff;
     box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.15);
 }
+.button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 13px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: red;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px #999;
+    height:16px;
+}
+
+
+
+.search_categories {
+    font-size: 18px;
+    padding: 6px 6px 6px 8px;
+    background: #fff;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    position: relative;
+    width: 120%;
+    background: url('arrow.png') no-repeat;
+    background-position: 80% center;
+    background: transparent;
+    line-height: 1;
+    padding: 0;
+    z-index: 10;
+    font-size: 1em;
+}
+
+    
+
+    .button:hover {
+        background-color: #ca270a
+    }
+
+    .button:active {
+        background-color: #ca270a;
+        box-shadow: 0 2px #666;
+        transform: translateY(4px);
+    }
 .btn-main-heading h2 {
     font-size: 2em;
     color: #68AE00;
