--- a/Fuel Management/Site.Master
+++ b/Fuel Management/Site.Master
@@ -22,6 +22,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='//fonts.googleapis.com/css?family=Work+Sans:400,500,600' rel='stylesheet' type='text/css'>
 <!--static chart-->
 <script src="js/Chart.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
 <!--//charts-->
 <!-- geo chart -->
     <script src="//cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
@@ -33,6 +36,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--skycons-icons-->
 <script src="js/skycons.js"></script>
 <!--//skycons-icons-->
+
+    <script>
+        function ConfirmationBox(SiteID) {
+            var finalresult = confirm('Are you sure you want to delete ' + SiteID + ' details');
+            if (finalresult) {
+                return true;
+            }
+            else {
+                return false;
+            }
+        }
+    </script>
 </head>
 <body>
     <form id="formi" runat="server">
